# comp0034-tutorials-2025

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: playwright.yml  python-package.yml
alembic/: env.py
alembic/versions/: 0fadc4e5e84f_1_create_initial_tables.py  2f286ffb451e_add_date_to_games.py
docs/week2/: 3-dash-layout.md  3-streamlit-layout.md  4-dash-structure.md  6-solution.md
docs/week3/: 1-chart-intro.md  2-create-charts.md  3-add-charts-dash.md  3-add-charts-flask.md  3-add-charts-streamlit.md  4-end.md
docs/week4/: 1-forms-intro.md  2-form-dash.md  2-form-flask.md  2-form-streamlit.md  3-form-with-data-dash.md  3-form-with-data-flask.md  3-form-with-data-st.md  4-end.md
docs/week5/: 1-intro.md  2-fixtures.md  3-playwright-tests.md  4-1-dash-selenium.md  4-2-dash-callbacks.md  4-flask-test-client.md  4-streamlit-tests.md  5-github-actions.md  6-further-info.md
docs/week6/: 1-intro.md  2-fastapi-app.md  3-alembic.md  4-database.md  5-routes.md  6-end.md
docs/week7/: 1-intro.md  2-schemas.md  3-get-routes.md  4-post-routes.md  5-delete-routes.md  6-put-patch-routes.md  7-end.md
docs/week8/: 1-intro.md  2-full-stack.md  3-logging-custom-errors.md  4-settings.md  5-auth.md  6-end.md
docs/week9/: 1-intro.md  2-testclient.md  3-tests-database.md  4-update-frontend-tests.md  5-ci.md  6-auth-tests.md  7-end.md
src/backend/: dependencies.py  main.py
src/dash_app/: dash_para_app.py  dash_paralympics.py  hover_card_example.py
src/data/: data_class.py  mock_api.py  paralympics.db  paralympics.xlsx  question.sql  response.sql
src/flask_app/: flask_para_app.py
src/paralympics/: app.py  charts.py
src/week6_starter/: .gitignore  README.md  pyproject.toml
src/week6_starter/src/backend/core/: db.py
src/week6_starter/src/backend/models/: models.py
src/week6_starter/src/data/: paralympics.xlsx  question.sql
tests/: conftest.py  test_paralympics.py
(+6 files in other folders)
