[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0034-activities"
version = "2025.01"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "pandas",
    "streamlit",
    "dash",
    "dash-ag-grid",
    "dash-bootstrap-components",
    "openpyxl",
    "fastapi",
    "uvicorn"
]
