[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0034-activities"
version = "2025.01"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "pandas",
    "streamlit",
    "dash",
    "dash-ag-grid",
    "dash-bootstrap-components",
    "openpyxl",
    "fastapi",
    "uvicorn",
    "plotly"
]

# Setuptools configuration see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration
# Not strictly required as default 'src' is automatically recognised by setuptools
[tool.setuptools]
package-dir = { "" = "src" } # tells setuptools that the root of the packages is in src/.

[tool.setuptools.packages.find]
where = ["src"] # tells setuptools to go and look inside src/ to find packages.