[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "paralympics-api"
version = "0.1.0"
description = "paralympics rest api"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "sqlmodel",
    "pytest",
    "pandas",
    "alembic",
    "openpyxl"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["backend"]

[pytest]
addopts = ["-ra", "-v"]  #-ra show extra test summary (all except passed) # -v increase verbosity
testpaths = ["tests"]
pythonpath = ["src/backend"]